# libtorch-test-amd

./: 1.cpp  1.py  CMakeLists.txt  a.out  main.cpp  main.py
